design fix and alignment fix

--- a/Webadmin/src/main/webapp/assets/css/custom.css
+++ b/Webadmin/src/main/webapp/assets/css/custom.css
@@ -459,6 +459,14 @@ button.btn.btn-outline {
 {
   min-height:45px;
 }
+.input-desc
+{
+  width: 80%;
+  padding-top: 10px;
+  margin-top: 5px;
+}
+
+
 
 /* left right modal css*/
 
